changed and fiex

--- a/wp-content/themes/neve/assets/css/mega-menu.css
+++ b/wp-content/themes/neve/assets/css/mega-menu.css
@@ -108,10 +108,10 @@
 }
 
 .footer-bottom-inner .hfg-grid .hfg-slot.left{
-  display:none;
+  display:none !important;
 }
 .hfg-slot.left{
-  display:none;
+  display:none !important;
 }
 
 /*# sourceMappingURL=mega-menu.css.map */
