--- a/wp-content/themes/neve/assets/css/mega-menu.css
+++ b/wp-content/themes/neve/assets/css/mega-menu.css
@@ -113,5 +113,8 @@
 .hfg-slot.left{
   display:none !important;
 }
+footer .builder-item:last-of-type{
+	display:none;
+}
 
 /*# sourceMappingURL=mega-menu.css.map */
